syntax = "proto3";

// Package namespace for Euclid OLAP gRPC services
package euclidolap;

// OLAP service definition
service OlapApi {
  // Executes an OLAP operation and returns results
  rpc ExecuteOperation(OLAPRequest) returns (OLAPResponse);
}

// Request message for OLAP operations
message OLAPRequest {
  // Type of OLAP operation (e.g., "query", "calculation")
  string operation_type = 1;

  // Operation statement (e.g., MDX query expression)
  string statement = 2;
}

message OLAPResponse {
  repeated GrpcOlapVector vectors = 1;
}

message GrpcOlapVector {
  bool null_flag = 1;
  double val = 2;
  string str = 3;
}